@@ -173,6 +173,10 @@ namespace TEN::Effects::Spark
 		spark.friction = 34;
 		spark.maxYvel = 0;
 		spark.gravity = 0;
+		spark.scalar = 2;
+		spark.dSize =
+		spark.sSize =
+		spark.size = Random::GenerateInt(44, 48);
 		spark.flags = SP_NONE;
 	}
 
