@@ -14,9 +14,10 @@ Version 1.0.6
 * Fix TR1 rat which crashed the game when it was killed.
 * Fix TR1 ape climbing.
 * Fix TR2 small spider climbing and pathfinding.
+* Fix TR3 Shiva and TR4 baddy 2 not blocking bullets.
 * Fix TR4 skeleton spawn when used with OCB 3.
 * Fix TR4 SAS teleporting over the blocks he walks by.
-* Fix TR3 Shiva and TR4 baddy 2 not blocking bullets.
+* Fix TR5 Roman statue and its meshswap.
 * Fix enemy projectile effect colours.
 * Fix enemy shadow position.
 * Fix sound positions not updated during flybys.
